[metadata]
name=boon
version=0.0.0
description=unix terminal framework
long-description=file:README.md
long_description_content_type=text/markdown
author=Tobias Bengfort
author-email=tobias.bengfort@posteo.de
home-page=https://github.com/xi/boon
license=MIT
license-file=LICENSE
classifiers=
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: User Interfaces

[options]
py_modules=boon
